# ValImgs

./: README.md  pyproject.toml
ValImgs/: __init__.py  __main__.py  main.py
